[package]
name = "nezumi-p"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
humanize-duration = { version = "0.0.6", features = ["chrono"] }
confy = "0.6.1"
